--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section id="inicio" class="inicio">
       <div class="contenido-banner">
         <div class="contenedor-img">
-          <img src="./public/foto-portafolio.png" alt="mi-foto" />
+          <img src="./public/mujer..jpg" alt="mi-foto" />
         </div>
         <h1>NATHALIA SANDOVAL</h1>
         <h2>Software Developer</h2>
@@ -79,11 +79,10 @@
           ></a>
         </div>
         <a
-          href=""
+          href="https://drive.google.com/uc?export=download&id=1kBwEyKmGoHdrEh7lxjBqyOYJqeL7Mt4E"
           rel="noopener noreferrer"
         >
-          <button>
-            Descargar CV
+          <button> Descargar CV         
             <i class="fa-solid fa-download"></i>
             <span class="overlay"></span>
           </button>
@@ -174,16 +173,16 @@
         <h2>PROYECTOS</h2>
         <div class="galeria">
           <div class="proyecto">
-            <img src="./public/pokedex.jpeg" alt="pokedex" />
+            <img src="./public/pokedex.jpg" alt="pokedex" />
             <div class="overlay">
-              <a href="https://pokedex-jcb.netlify.app/" target="_blank">
+              <a href="https://pokedexn.netlify.app/" target="_blank">
                 <h3>Pokedex</h3>
                 <p>React</p>
               </a>
             </div>
           </div>
           <div class="proyecto">
-            <img src="" alt="rick_and_morty" />
+            <img src="./public/rick.jpg" alt="rick_and_morty" />
             <div class="overlay">
               <a href="https://rickendmorty.netlify.app/" target="_blank">
                 <h3>Rick and Morty</h3>
@@ -192,7 +191,7 @@
             </div>
           </div>
           <div class="proyecto">
-            <img src="" alt="know_your_weather_app" />
+            <img src="./public/weather.jpg" alt="know_your_weather_app" />
             <div class="overlay">
               <a href="https://hoyesteeselclima.netlify.app" target="_blank">
                 <h3>Weather App</h3>
@@ -201,16 +200,16 @@
             </div>
           </div>
           <div class="proyecto">
-            <img src="./public/know_galaxy.jpeg" alt="know_your_galaxy" />
+            <img src="./public/galaxy.jpg" alt="know_your_galaxy" />
             <div class="overlay">
-              <a href="https://knowyourgalaxy.netlify.app" target="_blank">
+              <a href="https://thegalaxyphrases.netlify.app/" target="_blank">
                 <h3>know Your Galaxy</h3>
                 <p>React</p>
               </a>
             </div>
           </div>
           <div class="proyecto">
-            <img src="" alt="shopping_cartone" />
+            <img src="./public/shop.jpg" alt="shopping_cartone" />
             <div class="overlay">
               <a href="https://carritodecomprasn.netlify.app" target="_blank">
                 <h3>Your Store</h3>
@@ -248,15 +247,17 @@
       <div class="contenido-seccion">
         <h2>Contacto</h2>
         <div class="redes">
-          <a href="https://www.linkedin.com/" target="_blank"
+          <a href="https://www.linkedin.com/in/nathalia-sandoval-ni%C3%B1o-a9b20529b/" target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
           <a href="https://github.com/NathaSandoval" target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
-
-       
+        <a
+          href="https://drive.google.com/uc?export=download&id=1kBwEyKmGoHdrEh7lxjBqyOYJqeL7Mt4E"
+          rel="noopener noreferrer"
+        >    
           <button>
             Descargar CV
             <i class="fa-solid fa-download"></i>
@@ -271,3 +272,4 @@
     <script type="module" src="./main.js"></script>
   </body>
 </html>
+
